@@ -1,3 +1,9 @@
+2006-01-15  21:37 Andrej Kacian <andrej@kacian.sk>
+	* src/feed.c
+		src/rssyl_cb_menu.c
+		src/rssyl_gtk.c
+		HIGify some dialogs (patch by Colin Leroy)
+
 2006-01-14  21:08 Colin Leroy <colin@colino.net>
 	* src/plugin.c
 	  configure.ac
